fixed fig  align

--- a/blog/blogStyles.css
+++ b/blog/blogStyles.css
@@ -1,7 +1,14 @@
 img {
+    display: block;
     max-width: 100%;
     max-height: 97vh;
+    margin-left: auto;
+    margin-right: auto;
     height: auto;
+}
+
+figure {
+    text-align: center;
 }
 
 a:link {
